<resources>
    <string name="app_name">Waiterless</string>

    <string name="mainHeader">Welcome to Waiterless</string>
    <string name="mainLoginButton">Login</string>
    <string name="mainRegisterButton">Register</string>
    <string name="mainEmployeeButton">Employee Login</string>
    <string name="mainGuestButton">Guest</string>
    <string-array name="Profile_changes">
        <item>Name</item>
        <item>Birthday</item>
        <item>Email</item>
        <item>Password</item>
    </string-array>
</resources>